fixed java lint errors